--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,2 +1,3 @@
-<app-add-edit-item></app-add-edit-item>
-<app-list-items></app-list-items>
+<app-add-edit-item [item]="item"></app-add-edit-item>
+
+<app-list-items (onEditEvent)="onReceiveItem($event)"></app-list-items>
