--- a/src/app/list-items/list-items.component.html
+++ b/src/app/list-items/list-items.component.html
@@ -9,5 +9,6 @@
   </mat-card-content>
   <mat-card-actions>
     <button mat-flat-button (click) = "onDeleteItem(item.id)">Delete</button>
+    <button mat-flat-button (click) = "onEditItem(item)">Update</button>
   </mat-card-actions>
 </mat-card>
