--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,3 +1,6 @@
+<!--item este o proprietate/atribut pt componenta add-edit-item-->
+<!--atunci cand un atribut proprietate primeste ca valoare o variabila atributul se pune intre paranteze drepte-->
+<!--atunci cand un atribut proprietate primeste ca valoare un text (paddding:10px) inseamna ca este o valoaore statica aceasta nu se va schimba - nu putem pune paranteze drepte -->
 <app-add-edit-item [item]="item"></app-add-edit-item>
 
 <app-list-items (onEditEvent)="onReceiveItem($event)"></app-list-items>
