--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -1,1 +1,96 @@
-<p>auth works!</p>
+<div>
+  <mat-button-toggle-group name="fontStyle" aria-label="Font Style" value="register">
+    <mat-button-toggle value="register">Register</mat-button-toggle>
+    <mat-button-toggle value="login">Login</mat-button-toggle>
+  </mat-button-toggle-group>
+
+  <mat-card appearance="outlined">
+  <mat-card-header class="margin-bottom-15 margin-bottoom-100">
+    <mat-card-title>Register form</mat-card-title>
+    <mat-card-subtitle>Fill in all the fields below</mat-card-subtitle>
+  </mat-card-header>
+  <mat-card-content class="display-grid">
+    <mat-form-field class="input-form-field">
+      <mat-label>Username:</mat-label>
+      <input matInput type="text" [(ngModel)]="username">
+      @if (username) {
+        <button matSuffix mat-icon-button aria-label="Clear" (click)="username=''">
+          <mat-icon>close</mat-icon>
+        </button>
+      }
+    </mat-form-field>
+
+
+    <mat-form-field class="input-form-field">
+      <mat-label>E-mail:</mat-label>
+      <input matInput type="text" [(ngModel)]="email">
+      @if (email) {
+        <button matSuffix mat-icon-button aria-label="Clear" (click)="email=''">
+          <mat-icon>close</mat-icon>
+        </button>
+      }
+    </mat-form-field>
+
+
+    <mat-form-field class="input-form-field">
+      <mat-label>Password:</mat-label>
+      <input matInput type="password" [(ngModel)]="password">
+      @if (password) {
+        <button matSuffix mat-icon-button aria-label="Clear" (click)="password=''">
+          <mat-icon>close</mat-icon>
+        </button>
+      }
+    </mat-form-field>
+
+
+    <mat-form-field class="input-form-field">
+      <mat-label>Confirm password:</mat-label>
+      <input matInput type="password" [(ngModel)]="confirmPassword">
+      @if (confirmPassword) {
+        <button matSuffix mat-icon-button aria-label="Clear" (click)="confirmPassword=''">
+          <mat-icon>close</mat-icon>
+        </button>
+      }
+    </mat-form-field>
+  </mat-card-content>
+  <mat-card-actions>
+    <button mat-button (click) ="submitRegisterForm()" >Register</button>
+  </mat-card-actions>
+</mat-card>
+
+  <mat-card appearance="outlined">
+    <mat-card-header class="margin-bottom-15 margin-bottoom-100">
+      <mat-card-title>Login form</mat-card-title>
+      <mat-card-subtitle>Provide login details</mat-card-subtitle>
+    </mat-card-header>
+    <mat-card-content class="display-grid">
+
+      <mat-form-field class="input-form-field">
+        <mat-label>E-mail:</mat-label>
+        <input matInput type="text" [(ngModel)]="email">
+        @if (email) {
+          <button matSuffix mat-icon-button aria-label="Clear" (click)="email=''">
+            <mat-icon>close</mat-icon>
+          </button>
+        }
+      </mat-form-field>
+
+
+      <mat-form-field class="input-form-field">
+        <mat-label>Password:</mat-label>
+        <input matInput type="password" [(ngModel)]="password">
+        @if (password) {
+          <button matSuffix mat-icon-button aria-label="Clear" (click)="password=''">
+            <mat-icon>close</mat-icon>
+          </button>
+        }
+      </mat-form-field>
+
+
+    </mat-card-content>
+    <mat-card-actions>
+      <button mat-button (click) ="submitLoginForm()" >Login</button>
+    </mat-card-actions>
+  </mat-card>
+</div>
+
